Fix about page alignment

--- a/frontend/src/app/shell/layout/layout.component.scss
+++ b/frontend/src/app/shell/layout/layout.component.scss
@@ -40,4 +40,5 @@ mat-progress-bar {
   width: 100%;
   flex: 1;
   display: flex;
+  flex-direction: column;
 }
